package com.yjotdev.accidentreporter.presentation.utils

object TestTags {
    const val ADD_POSITION_VIEW_COMBO_BOX = "addpositionview_combobox"
    const val ADD_POSITION_VIEW_TEXT_FIELD = "addpositionview_textfield"
    const val ADD_POSITION_VIEW_BUTTON = "addpositionview_button"

    const val GOOGLE_MAP = "googleMap"
    const val MARKET_POS = "Market:1"

    const val START_VIEW_BUTTON_1 = "startview_button1"
    const val START_VIEW_BUTTON_2 = "startview_button2"

    const val TOKEN_CONFIG_VIEW_TEXT_FIELD = "tokenconfigview_textfield"
    const val TOKEN_CONFIG_VIEW_EDIT_BUTTON = "tokenconfigview_editbutton"
    const val TOKEN_CONFIG_VIEW_UPDATE_BUTTON = "tokenconfigview_updatebutton"

    const val EDIT_POSITION_VIEW_COMBO_BOX = "editpositionview_combobox"
    const val EDIT_POSITION_VIEW_TEXT_FIELD = "editpositionview_textfield"
    const val EDIT_POSITION_VIEW_EDIT_BUTTON = "editpositionview_editbutton"
    const val EDIT_POSITION_VIEW_UPDATE_BUTTON = "editpositionview_updatebutton"

    const val COUNTRY_VIEW_TEXT_FIELD_1 = "countryview_textfield1"
    const val COUNTRY_VIEW_TEXT_FIELD_2 = "countryview_textfield2"
    const val COUNTRY_VIEW_TEXT_FIELD_3 = "countryview_textfield3"
    const val COUNTRY_VIEW_BUTTON_1 = "countryview_button1"
    const val COUNTRY_VIEW_BUTTON_2 = "countryview_button2"

    const val COMBO_BOX_ITEM_POS = "combobox_item:3"
    const val MAP_VIEW_LOOK_BUTTON = "mapview_lookbutton"
    const val MAP_VIEW_DELETE_BUTTON = "mapview_deletebutton"
    const val BACK_BUTTON = "backbutton"
}